--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "2g-servicios-generales",
-  "homepage": "https://github.com/MarceloLopezS/2g-servicios-generales",
+  "homepage": "https://marcelolopezs.github.io/2g-servicios-generales/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
